examples/errors/undefined_method/main.hd
struct Rect {
    width: int,
    height: int
}

fn main(): int {
    let r = Rect { width: 10, height: 5 };
    let a = r.area();
    return a;
}
